--- a/Lymphoma_Cell_Detection.ipynb
+++ b/Lymphoma_Cell_Detection.ipynb
@@ -6,7 +6,7 @@
       "name": "Lymphoma_Cell_Detection.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOdKMEKdKwSXQt7Z5EKVbOJ",
+      "authorship_tag": "ABX9TyOZ+CtbsNNC1J3CEa14k1+v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -629,15 +629,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "5ccd8e33-0962-4b84-f0fe-58818e9013ac"
+        "outputId": "c23b4709-a6fc-4af6-c371-6636a08014d8"
       },
       "source": [
-        "X = df.iloc[:,:-1]\n",
-        "y = df.iloc[:,-1]\n",
+        "X = df.iloc[:,:-1].values\n",
+        "y = df.iloc[:,-1].values\n",
         "print(\"X - Shape {}\".format(X.shape))\n",
         "print(\"y - Shape {}\".format(y.shape))"
       ],
-      "execution_count": 49,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,7 +673,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "63685079-c754-4227-cc3a-73c0475ff177"
+        "outputId": "436f37ca-a7bd-4769-d249-ac13f9a5617c"
       },
       "source": [
         "le = LabelEncoder()\n",
@@ -682,7 +682,7 @@
         "y = le.transform(y)\n",
         "print(y_map)"
       ],
-      "execution_count": 50,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -724,7 +724,75 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xju9a3DDYXxS",
+        "id": "8tyNRv4xZ_dj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pca = PCA(n_components= min(X_tst.shape[0],(X.shape[1])//3))\n",
+        "X_trn = pca.fit_transform(X_trn)\n",
+        "X_tst = pca.fit_transform(X_tst)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wqw0mZrPbCBs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.linear_model import LogisticRegression as LogReg\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.tree import DecisionTreeClassifier as DecTreeC\n",
+        "from sklearn.ensemble import RandomForestClassifier as RndFC\n",
+        "from sklearn.neighbors import KNeighborsClassifier as KnnC\n",
+        "from sklearn.metrics import classification_report as report ,confusion_matrix as cmatrix, accuracy_score"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mleLP8hec1wj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "08a98265-c97c-41bd-a9e7-044b850bc849"
+      },
+      "source": [
+        "LR = LogReg(penalty='l2',class_weight='balanced',random_state=0,max_iter=500)\n",
+        "LR.fit(X_trn,y_trn)"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LogisticRegression(C=1.0, class_weight='balanced', dual=False,\n",
+              "                   fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
+              "                   max_iter=500, multi_class='auto', n_jobs=None, penalty='l2',\n",
+              "                   random_state=0, solver='lbfgs', tol=0.0001, verbose=0,\n",
+              "                   warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4Gn4vk68guDr",
         "colab_type": "code",
         "colab": {}
       },
