Commit - 3 -> Created using Colaboratory

--- a/Lymphoma_Cell_Detection.ipynb
+++ b/Lymphoma_Cell_Detection.ipynb
@@ -6,7 +6,7 @@
       "name": "Lymphoma_Cell_Detection.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOZ+CtbsNNC1J3CEa14k1+v",
+      "authorship_tag": "ABX9TyN4cZxzGYzs/mtK7Ce37bde",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -701,7 +701,7 @@
         "colab": {}
       },
       "source": [
-        "X_trn,X_tst,y_trn,y_tst = tts(X,y,test_size=0.25,random_state=0)"
+        "X_trn,X_tst,y_trn,y_tst = tts(X,y,test_size=0.25,random_state=0,stratify=y)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -757,42 +757,146 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "_x2tUR29kCTt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "models = ['LogisticRegression','SVC','DecisionTreeClassifier','RandomForestClassifier','KNeighborsClassifier']\n",
+        "accu_types = ['Training Data Accuracy','Testing Data Accuracy']\n",
+        "dict={}"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "mleLP8hec1wj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "obj = LogReg(penalty='l2',class_weight='balanced',random_state=0,max_iter=500)\n",
+        "obj.fit(X_trn,y_trn)\n",
+        "accu_trn = accuracy_score(obj.predict(X_trn) ,y_trn)\n",
+        "accu_tst = accuracy_score(obj.predict(X_tst) ,y_tst)\n",
+        "dict.update( {models[0] : { accu_types[0] : accu_trn , accu_types[1] : accu_tst}})"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4Gn4vk68guDr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "obj = SVC(kernel='rbf')\n",
+        "obj.fit(X_trn,y_trn)\n",
+        "accu_trn = accuracy_score(obj.predict(X_trn) ,y_trn)\n",
+        "accu_tst = accuracy_score(obj.predict(X_tst) ,y_tst)\n",
+        "dict.update( {models[1] : { accu_types[0] : accu_trn , accu_types[1] : accu_tst}})"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fCAdvHIQpRVR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "obj = DecTreeC(criterion='gini',splitter='best',max_depth=10,min_samples_leaf=1)\n",
+        "obj.fit(X_trn,y_trn)\n",
+        "accu_trn = accuracy_score(obj.predict(X_trn) ,y_trn)\n",
+        "accu_tst = accuracy_score(obj.predict(X_tst) ,y_tst)\n",
+        "dict.update( {models[2] : { accu_types[0] : accu_trn , accu_types[1] : accu_tst}})"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bb733YvHpUAv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "obj = RndFC(n_estimators=50,criterion='gini',random_state=0)\n",
+        "obj.fit(X_trn,y_trn)\n",
+        "accu_trn = accuracy_score(obj.predict(X_trn) ,y_trn)\n",
+        "accu_tst = accuracy_score(obj.predict(X_tst) ,y_tst)\n",
+        "dict.update( {models[3] : { accu_types[0] : accu_trn , accu_types[1] : accu_tst}})"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EUcyWGFhqE7R",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "obj = KnnC(n_neighbors=10,weights='distance',metric='minkowski')\n",
+        "obj.fit(X_trn,y_trn)\n",
+        "accu_trn = accuracy_score(obj.predict(X_trn) ,y_trn)\n",
+        "accu_tst = accuracy_score(obj.predict(X_tst) ,y_tst)\n",
+        "dict.update( {models[4] : { accu_types[0] : accu_trn , accu_types[1] : accu_tst}})"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nhEf8fql6Ou3",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 102
+          "height": 187
         },
-        "outputId": "08a98265-c97c-41bd-a9e7-044b850bc849"
+        "outputId": "67d41cd6-8729-488e-8b93-eee9e09b944a"
       },
       "source": [
-        "LR = LogReg(penalty='l2',class_weight='balanced',random_state=0,max_iter=500)\n",
-        "LR.fit(X_trn,y_trn)"
+        "dict"
       ],
-      "execution_count": 71,
+      "execution_count": 156,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "LogisticRegression(C=1.0, class_weight='balanced', dual=False,\n",
-              "                   fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
-              "                   max_iter=500, multi_class='auto', n_jobs=None, penalty='l2',\n",
-              "                   random_state=0, solver='lbfgs', tol=0.0001, verbose=0,\n",
-              "                   warm_start=False)"
+              "{'DecisionTreeClassifier': {'Testing Data Accuracy': 0.3,\n",
+              "  'Training Data Accuracy': 1.0},\n",
+              " 'KNeighborsClassifier': {'Testing Data Accuracy': 0.35,\n",
+              "  'Training Data Accuracy': 1.0},\n",
+              " 'LogisticRegression': {'Testing Data Accuracy': 0.35,\n",
+              "  'Training Data Accuracy': 0.9122807017543859},\n",
+              " 'RandomForestClassifier': {'Testing Data Accuracy': 0.35,\n",
+              "  'Training Data Accuracy': 1.0},\n",
+              " 'SVC': {'Testing Data Accuracy': 0.65,\n",
+              "  'Training Data Accuracy': 0.9122807017543859}}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 71
+          "execution_count": 156
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4Gn4vk68guDr",
+        "id": "MPu7kaFP6QBL",
         "colab_type": "code",
         "colab": {}
       },
